--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,8 @@
 <h1>Hello, Rails!</h1>
-
 <ul>
   <% @articles.each do |article| %>
     <li>
-      <%= article.title %>
+      <%= link_to article.title, article %>
     </li>
   <% end %>
 </ul>
